2013-02-18 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/vector/string_proxy.h : only declare operator+=
        * include/Rcpp/String.h : define string_proxy::operator+=, now that
        String is defined.

2013-02-15 JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: Merge existing values of build related
        environment variables for sourceCpp

2013-02-12 Romain Francois <romain@r-enthusiasts.com>

        * src/api.cpp : More careful about RCPP_PROTECTION_STACK init

2013-02-08 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/as.h: re-enable as<std::string>(CharacterVector[int])
2013-02-07  Dirk Eddelbuettel  <edd@debian.org>

	* inst/THANKS: Adding Ben North for the help / bug report on iterators

2013-02-05 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/vector/string_proxy.h : more wstring support
        * include/Rcpp/XPtr.h : more debugging. removed delete_finalizer
	which is no longer used

2013-02-05 JJ Allaire <jj@rstudio.org>

        * src/attributes.cpp : ensure that line comments invalidate block
        comments when parsing for attributes

2013-02-04 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/traits/r_type_traits.h : make the
	r_type_pairstring_string_tag tag more general, handling wstring as
	well as string
        * include/Rcpp/internal/wrap.h : using make_charsexp, a more generic
	version of charsexp_from_wstring.
        * include/Rcpp/as.h : more support fot wstring
        * include/Rcpp/internal/wrap.h : rework the support of wstring
        * include/Rcpp/internal/export.h : added as_string_elt to rework the
	support of wstring
        * include/Rcpp/traits/char_type.h : new trait to help the wstring
	support
        * include/Rcpp/String.h : added some support for wstring
        * include/Rcpp/vector/string_proxy.h : adapt to add wstring support
        * unitTests/runit.wstring.R : unit tests for wstring support